[PE] Clear pagination offset on fragmentation update.

Previously there was a bug in which we left a stale pagination offset
when an element became un-paginated.

Bug: 797751
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I226f285f31c4ea1769870c73584916b8f1083441
Reviewed-on: https://chromium-review.googlesource.com/846343
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526356}
Former-commit-id: 59388664eb816df4b0757190da4e2d20d5989770